fixes overlap bug

--- a/parte2/frase.css
+++ b/parte2/frase.css
@@ -38,33 +38,21 @@ i {
     opacity: 0.25;
     transform: translateY(-0.5em);
   }
-  12.5% {
-    opacity: 0.5;
-    transform: translateY(-0.25em);
-  }
+
   25% {
     opacity: 1;
     transform: translateY(0);
   }
-  37.5% {
-    opacity: 0.5;
-    transform: translateY(0.25em);
-  }
+
   50% {
     opacity: 0;
     transform: translateY(0.5em);
   }
-  62.5% {
-    opacity: 0;
-    transform: translateY(0.25em);
-  }
+
   75% {
     opacity: 0;
-    transform: translateY(0.5em);
   }
-  87.5% {
-    opacity: 0;
-  }
+
   100% {
     opacity: 0;
   }
@@ -72,20 +60,21 @@ i {
 #i1 {
   animation-name: movingWords;
   animation-duration: 6s;
+  animation-delay: 3s;
   animation-iteration-count: infinite;
-  opacity: 0;
+  opacity: 1;
 }
 #i2 {
   animation-name: movingWords;
   animation-duration: 6s;
-  animation-delay: 4s;
+  animation-delay: 5s;
   animation-iteration-count: infinite;
   opacity: 0;
 }
 #i3 {
   animation-name: movingWords;
   animation-duration: 6s;
-  animation-delay: 8s;
+  animation-delay: 7s;
   animation-iteration-count: infinite;
   opacity: 0;
 }
